# KAGGLE

./: .gitignore  README.md  kaggle_token.txt  pyproject.toml  sync.sh
configs/: lgbm_baseline.json
nvidia-nemotron-model-reasoning-challenge/: README.md  kernel-metadata.json  nemotron-087-training.ipynb  nvidia-nemotron-submission-demo-fixed.ipynb
nvidia-nemotron-model-reasoning-challenge/src/: experiment_utils.py  submission_budget.py
nvidia-nemotron-model-reasoning-challenge/unsloth_compiled_cache/: UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
playground-series-s6e6/: .gitignore  README.md  kernel-metadata.json  run_pseudo_pipeline.sh  run_stacking_pipeline.sh  s6e6_pipeline.py  train_all.sh
playground-series-s6e6/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
playground-series-s6e6/catboost_info/learn/: events.out.tfevents
playground-series-s6e6/catboost_info/test/: events.out.tfevents
playground-series-s6e6/src/: blend.py  download_data.py  experiment_utils.py  generate_pseudo_labels.py  knn_smoothing.py  leak_check.py  stacker.py  train_s6e6.py
src/: download_data.py  train_baseline.py  validate_submission.py
